--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.3"
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "@types/yup": "^0.32.0",
+    "json-server": "^0.16.3",
+    "typescript": "^4.8.3"
   }
 }
